<resources>
    <string name="app_name">BookStoreUdacity</string>

    <!-- activity_catalog -->
    <string name="empty_bookshelf_description">An image of an empty bookshelf</string>
    <string name="empty_view_title_text">What a lonely store&#8230;</string>
    <string name="empty_view_subtitle_text">Click the button to add a product</string>

    <!-- activity_editor -->
    <string name="product_info">Product Info</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price (15.99)</string>
    <string name="product_quantity">Quantity</string>
    <string name="supplier_info">Supplier Info</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Phone Number</string>
    <string name="button_decrement">-</string>
    <string name="button_increment">+</string>
    <string name="button_order">Order from Supplier</string>

    <!-- menu_catalog -->
    <string name="test_data">Insert Test Data</string>
    <string name="delete_all_data">Delete All Products</string>

    <!-- menu_editor -->
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <!-- CatalogActivity -->
    <!-- displayDatabaseInfo -->
    <string name="display_view_table_contains">"The products table contains "</string>
    <string name="contains_products">" products \n\n"</string>
    <string name="dash_divider">" - "</string>

    <!-- insertTestProduct -->
    <string name="test_name">The Client</string>
    <string name="test_price">9.99</string>
    <string name="test_quantity">7</string>
    <string name="test_supplier_name">Amazon</string>
    <string name="test_supplier_phone">18882804331</string>

    <!-- showDeleteConfirmationDialog -->
    <string name="catalog_delete_dialog_msg">Delete all products?</string>
    <!-- deleteAllPets -->
    <string name="catalog_delete_all_products_successful">All products deleted</string>
    <string name="catalog_delete_all_products_failed">Error with deleting all products</string>

    <!-- EditorActivity -->
    <string name="editor_activity_tel_uri">tel:</string>
    <!-- saveProducts-->
    <string name="editor_activity_fill_fields_toast">Please fill in all fields.</string>
    <string name="editor_activity_inset_product_failed">Error with saving product</string>
    <string name="editor_activity_insert_product_successful">Product saved</string>
    <string name="editor_activity_update_product_failed">Error updating product</string>
    <string name="editor_activity_update_product_successful">Product updated</string>

    <!-- Set a title for EditorActivity -->
    <string name="editor_activity_title_add_product">Add A Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- showUnsavedChangeDialog -->
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <!-- showDeleteConfirmationDialog -->
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="cancel">Cancel</string>
    <!-- deleteProduct -->
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- list_item.xml -->
    <string name="price_label">Price: $</string>
    <string name="price_example_tools">9.99</string>
    <string name="quantity_label">Quantity:</string>
    <string name="quantity_example_tools">100</string>
    <string name="sale_button_label">Sale</string>

    <!-- ProductCursorAdapter -->
    <string name="order_more_products_toast">Time to order more products</string>

</resources>
