<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/parent_linear_layoutt_padding"
    tools:context=".EditorActivity">

    <LinearLayout style="@style/CategoryParentLayout">

        <!-- Product Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_info" />

        <LinearLayout style="@style/CategoryChildLayout">

            <!-- Product Name -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_name"
                android:inputType="textCapWords|textAutoCorrect" />
            <!-- Product Price -->
            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_price"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/product_quantity"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/CategoryParentLayout">

        <!-- Supplier Info -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier_info" />

        <LinearLayout style="@style/CategoryChildLayout">

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_supplier_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_phone"
                android:inputType="phone" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>