<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/list_item_parent_layout_padding">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#2B3D4D" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:layout_marginLeft="@dimen/view_margin"
        android:layout_marginRight="@dimen/view_margin"
        android:background="@android:color/darker_gray" />

    <LinearLayout style="@style/ListItemParentLayout">

        <LinearLayout style="@style/ListItemChildLayout">

            <TextView
                android:id="@+id/price_label"
                style="@style/ListItemLabelTextView"
                android:text="@string/price_label" />

            <TextView
                android:id="@+id/price"
                style="@style/ListItemTextView"
                tools:text="@string/price_example_tools" />


        </LinearLayout>

        <LinearLayout style="@style/ListItemChildLayout">

            <TextView
                android:id="@+id/quantity_label"
                style="@style/ListItemLabelTextView"
                android:text="@string/quantity_label" />

            <TextView
                android:id="@+id/quantity"
                style="@style/ListItemTextView"
                tools:text="@string/quantity_example_tools" />

        </LinearLayout>

        <Button
            android:id="@+id/sale_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/sale_button_label" />

    </LinearLayout>

</LinearLayout>